hard-gists/83e4136803ca67b4955a/run.log
=== Docker Run Log for 83e4136803ca67b4955a ===
Started at: Mi 29. Okt 17:47:08 CET 2025

[2025-10-29 17:47:08] START: Running container for 83e4136803ca67b4955a
[2025-10-29 17:47:09] SUCCESS: Container a0d311978ecf58c3bdd609379caee9772f2d98bd82357f29b79f4030cdd9c45e started for 83e4136803ca67b4955a
=== Container logs for 83e4136803ca67b4955a ===
  File "/snippet.py", line 56
    print "<result>{}</result>".format(', '.join(sorted(list(set(installed_extensions)))).encode('utf-8'))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 83e4136803ca67b4955a ===
[2025-10-29 17:47:11] INFO: Container a0d311978ecf58c3bdd609379caee9772f2d98bd82357f29b79f4030cdd9c45e has stopped
